<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative_driver_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding"
        android:visibility="gone">

        <TextView
            android:id="@+id/activity_offer_ride_3_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:text="@string/offer_ride_driver_details"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_3_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_3_tv"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_3_dn_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_driver_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_3_et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_3_et"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_3_ln_et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_driver_licence_number"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_3_et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_3_et1"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_3_age_et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_driver_age"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_offer_ride_3_et2"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:padding="4dp"
                android:text="@string/sign_up_et_gender"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_gender_driver"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up_rb_male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up_rb_female" />
            </RadioGroup>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_3_et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_3_mn_et3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_driver_mobile_number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_3_et4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_3_et3"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_3_de_et4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_driver_driving_experience"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_offer_ride_3_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_offer_ride_3_et4"
            android:layout_marginTop="@dimen/margin_top_btn"
            android:background="@drawable/custom_btn"
            android:text="@string/ride_done_btn"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative_driver_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/driver_pop_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:text="@string/dialog_is_your_driver_already_registered"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:id="@+id/linear_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/driver_pop_up_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:layout_centerHorizontal="true">

            <RadioGroup
                android:id="@+id/rg_driver_pop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/driver_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_top_btn"
                    android:text="@string/dialog_vehicle_yes"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/margin_top_btn" />

                <RadioButton
                    android:id="@+id/driver_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_top_btn"
                    android:text="@string/dialog_vehicle_no"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/margin_top_btn" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_driver_pop_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_rb"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_btn"
            android:background="@drawable/custom_btn"
            android:gravity="center"
            android:text="@string/dialog_vehicle_okay"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl_driver_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/offered_ride_list_v2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_tv" />


        <TextView
            android:id="@+id/driver_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_offer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


</RelativeLayout>