<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:scrollbars="none">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:padding="@dimen/screen_padding">

            <TextView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="@dimen/margin_top_logo"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="italic|bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="@dimen/margin_top_et">

                <EditText
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_et_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email"
                android:layout_marginTop="@dimen/margin_top_et"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_sign_in_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_et_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_sign_in"
                android:layout_marginTop="@dimen/margin_top_btn"
                android:background="@drawable/custom_btn"
                android:text="@string/login_bt_sign_in"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/guest_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_in_btn"
                android:layout_marginTop="@dimen/margin_top_btn"
                android:background="@drawable/custom_btn"
                android:gravity="center"
                android:text="@string/login_bt_guest_sign_in"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_tv"
                android:layout_below="@id/guest_sign_in"
                android:background="@null"
                android:text="@string/btn_forgot_your_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_reset_password"
                android:layout_marginTop="@dimen/margin_top_tv"
                android:gravity="center"
                android:text="@string/login_tv_create_account"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>


