<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding"
        android:visibility="gone">

        <TextView
            android:id="@+id/activity_offer_ride_2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:text="@string/offer_ride2_ride_details"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_tv"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_2_reg_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_2_hint_reg_no"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_2_et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_et"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_2_seats_et1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_2_hint_seat_no"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_offer_ride_2_et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_et1"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et">

            <EditText
                android:id="@+id/activity_offer_ride_2_car_name_et2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_ride_car_name"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/activity_offer_ride_2_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_et2"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:text="@string/offer_ride_car_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/activity_offer_ride_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_et2"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et"
            android:layout_toEndOf="@id/activity_offer_ride_2_tv1"
            android:layout_toRightOf="@id/activity_offer_ride_2_tv1" />


        <TextView
            android:id="@+id/activity_offer_ride_2_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_tv1"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:text="@string/offer_ride_brand"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/activity_offer_ride_sp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_tv1"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et"
            android:layout_toEndOf="@id/activity_offer_ride_2_tv2"
            android:layout_toRightOf="@id/activity_offer_ride_2_tv2" />

        <TextView
            android:id="@+id/activity_offer_ride_2_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_tv2"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:text="@string/offer_ride_fuel_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/activity_offer_ride_sp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_offer_ride_2_tv2"
            android:layout_marginBottom="@dimen/margin_top_et"
            android:layout_marginTop="@dimen/margin_top_et"
            android:layout_toEndOf="@id/activity_offer_ride_2_tv3"
            android:layout_toRightOf="@id/activity_offer_ride_2_tv3" />

        <Button
            android:id="@+id/activity_offer_ride_2_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_offer_ride_sp2"
            android:layout_marginTop="@dimen/margin_top_btn"
            android:background="@drawable/custom_btn"
            android:text="@string/ride_btn_next"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/screen_padding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/vehicle_pop_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:text="@string/dialog_is_your_vehicle_already_registered"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:id="@+id/linear_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_pop_up_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:layout_centerHorizontal="true">

            <RadioGroup
                android:id="@+id/rg_pop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_top_btn"
                    android:text="@string/dialog_vehicle_yes"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/margin_top_btn" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_top_btn"
                    android:text="@string/dialog_vehicle_no"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/margin_top_btn" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_pop_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_rb"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_btn"
            android:background="@drawable/custom_btn"
            android:gravity="center"
            android:text="@string/dialog_vehicle_okay"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/screen_padding"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/offered_ride_list_vl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top_tv" />


        <TextView
            android:id="@+id/vehicle_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_top_tv"
            android:layout_marginTop="@dimen/margin_top_tv"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar_offer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />


</RelativeLayout>